kubernetes/deployments/apiflask-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: apiflask
  name: apiflask
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apiflask
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: apiflask
    spec:
      containers:
      - image: wiemlimem/talanappstore:apikubernetes
        name: apiflask
        ports:
        - containerPort: 5000
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/data
          name: backend-claim
      hostname: apiflask
      restartPolicy: Always
      serviceAccountName: job-robot
      volumes:
      - name: backend-claim
        persistentVolumeClaim:
          claimName: backend-claim
status: {}
