kubernetes/deployments/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: backend1
  name: backend1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: backend1
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_URL
          value: jdbc:postgresql://db-standalone:5432/TalanAppStore
        - name: SPRING_JPA_HIBERNATE_DDL_AUTO
          value: update
        - name: DOCKER_HOST
          value: unix:///var/run/docker.sock
        image: zainebmah/pfe:minbackend
        name: backend1
        securityContext:
          privileged: true
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/data
          name: backend-claim
      restartPolicy: Always
      serviceAccountName: job-robot
      volumes:
      - name: backend-claim
        persistentVolumeClaim:
          claimName: backend-claim
status: {}
