kubernetes/deployments/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db-standalone
  name: db-standalone
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-standalone
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: db-standalone
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          value: postgres
        - name: POSTGRES_PASSWORD
          value: "0000"
        - name: POSTGRES_DB
          value: TalanAppStore
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
        image: postgres:13.1-alpine
        name: db-standalone
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: pgdata
      restartPolicy: Always
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgdata
status: {}
