kubernetes/deployments/apiflask-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: apiflask
  name: apiflask
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    io.kompose.service: apiflask
status:
  loadBalancer: {}
