kubernetes/deployments/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: testt-ingress

spec:
  rules:
  - http:
      paths:
      - path: /appstore
        backend:
          serviceName: frontend
          servicePort: 80
  backend:
          serviceName: frontend
          servicePort: 80
